# SOMA-shared

./: .gitignore  README.md  pyproject.toml  schema.dbml
alembic/: env.py
alembic/versions/: 0c7e4b1d2f9a_add_db_metrics_tables.py  3d2be0724e0c_rebuild_views_mv_status_ref_in_competition_stats.py  4a1b2c3d4e5f_drop_request_pool_metric_columns.py  4c6d8e1f2a3b_add_miner_openrouter_api_keys.py  5b8d7e6a9c1f_add_swebench_orchestration_state.py  799b43ffe9be_merge_heads_ab12cd34ef56_c7d8e9f0a1b2.py  8d4a6a71f2b1_add_miner_banned_status_to_miners.py  9d1e2f3a4b5c_add_swe_bench_tables.py  a1b2c3d4e5f6_add_version_code_changed_to_validators.py  a1c2d3e4f5b6_add_somarizzer_api_keys.py  a2b3c4d5e6f7_add_benchmark_type_drop_resolved.py  a3e1f2c9b8d7_add_materialized_views.py  a8f2d6c4b1e9_add_partial_scores_and_ratio_winner_view.py  a9b8c7d6e5f4_add_weight_to_top_miners.py  ab12cd34ef56_add_swebench_run_batches.py  b1c2d3e4f5a6_add_response_payload_to_requests.py  b2d4f6a8c0e1_add_soma_api_keys.py  b3f1d8a7c2e4_add_split_token_columns_to_swe_bench_runs.py  b6e4c2d1f9a8_update_v_active_competition_view.py  b7c8d9e0f1a2_add_model_to_validators.py  c14d2be1f9aa_materialize_batch_challenge_questions.py  c1a2b3d4e5f6_rebuild_all_views_and_materialized_views.py  c3d4e5f6a7b8_add_is_partial_winner_to_compression_competition_config.py  c7d8e9f0a1b2_add_approved_to_top_miners.py  c9b8e7a6d5f4_add_is_archive_to_validators.py  cb3f6f9d97c0_fix_miner_screener_eligible_ranked_view_.py  d2e4f6a8b0c1_add_miner_screener_eligible_ranked_view.py  d2e4f6a8b0c1_add_miner_screener_qualified_view.py  d4e6f8a1b2c3_add_indexes_for_view_performance.py  d5e7f9a1b3c4_drop_unused_regular_views.py  d8c4f1b2a7e6_dematerialize_batch_challenge_questions_view.py  e3f4a5b6c7d8_add_status_to_miner_status_views.py  e4b9c1d2a6f7_drop_batch_challenge_question_views.py  (+9 more)
soma_shared/: __init__.py
(+75 files in other folders)
